charts/all/spoke-neuroface/templates/namespace-neuroface.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neuroface
  labels:
    istio.io/dataplane-mode: ambient
    kubecost.io/team: neuroface
    kubecost.io/product: ai-vision
  annotations:
    argocd.argoproj.io/sync-wave: "0"
