charts/all/spoke-neuroface/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: neuroface-spoke-gateway
  namespace: neuroface
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
